# pynector

./: .pre-commit-config.yaml  .roomodes  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
.roo/rules/: 002_golden_path.md  00_overview.md  01_dev_style.md
.roo/rules-pydapter-implementer/: TEMPLATE_TI_test_implementation.md
.roo/rules-pydapter-orchestrator/: MODE_INSTRUCTION.md
.roo/rules-pydapter-quality-reviewer/: MODE_INSTRUCTION.md  TEMPLATE_QA_qa_summary.md
changelog/: index.html
client/: index.html
concurrency/: index.html
development/architecture/: index.html
development/code-of-conduct/: index.html
development/contributing/: index.html
docs/: client.md  concurrency.md  http_transport.md  observability.md  sdk_transport.md  transport.md
getting-started/installation/: index.html
getting-started/quick-start/: index.html
http_transport/: index.html
observability/: index.html
reports/crr/: CRR-10.md  CRR-12.md  CRR-14.md  CRR-15.md  CRR-8.md  CRR-9.md
reports/ip/: IP-1.md  IP-2.md  IP-3-update.md  IP-3.md  IP-4.md  IP-5.md  IP-6.md
reports/rr/: RR-1.md  RR-2.md  RR-3.md  RR-4.md  RR-5.md  RR-6.md
reports/tds/: TDS-1.md  TDS-2.md  TDS-3.md  TDS-4.md  TDS-5.md  TDS-6.md
reports/ti/: TI-1.md  TI-2.md  TI-3.md  TI-4.md  TI-5.md  TI-6.md
sdk_transport/: index.html
search/: search_index.json
src/pynector/: __init__.py  client.py  config.py  errors.py
src/pynector/concurrency/: __init__.py  cancel.py  task.py  (+3 more)
tests/: conftest.py  test_client.py  test_integration.py
tests/concurrency/: __init__.py  test_cancel.py  test_errors.py  test_integration.py  test_patterns.py  test_primitives.py  test_task.py
tests/telemetry/: __init__.py  conftest.py  test_config.py  test_config_dummy.py  test_config_extra.py  test_context.py  test_context_extra.py  test_facade.py  test_facade_extra.py  test_init.py  test_integration.py  test_logging.py  test_tracing.py
tests/transport/: test_errors.py  test_factory.py  test_integration.py  test_property.py  test_protocol.py  test_registry.py
transport/: index.html
(+40 files in other folders)
